test/compile-fail/resolution/pub/field-beyond-struct/expected.txt
error[E0449]: unnecessary visibility qualifier
   ┌─ ./test/compile-fail/resolution/pub/field-beyond-struct/top.rhdl:10:16
   │
10 │     enum j { a(pub x), b { pub inner: x }, c(pub(crate) x) }
   │                ^^^

error[E0449]: unnecessary visibility qualifier
   ┌─ ./test/compile-fail/resolution/pub/field-beyond-struct/top.rhdl:10:28
   │
10 │     enum j { a(pub x), b { pub inner: x }, c(pub(crate) x) }
   │                            ^^^

error[E0449]: unnecessary visibility qualifier
   ┌─ ./test/compile-fail/resolution/pub/field-beyond-struct/top.rhdl:10:46
   │
10 │     enum j { a(pub x), b { pub inner: x }, c(pub(crate) x) }
   │                                              ^^^^^^^^^^

error[E0449]: unnecessary visibility qualifier
   ┌─ ./test/compile-fail/resolution/pub/field-beyond-struct/top.rhdl:11:20
   │
11 │     pub enum k { a(pub x), b { pub inner: x }, c(pub(crate) x) }
   │                    ^^^

error[E0449]: unnecessary visibility qualifier
   ┌─ ./test/compile-fail/resolution/pub/field-beyond-struct/top.rhdl:11:32
   │
11 │     pub enum k { a(pub x), b { pub inner: x }, c(pub(crate) x) }
   │                                ^^^

error[E0449]: unnecessary visibility qualifier
   ┌─ ./test/compile-fail/resolution/pub/field-beyond-struct/top.rhdl:11:50
   │
11 │     pub enum k { a(pub x), b { pub inner: x }, c(pub(crate) x) }
   │                                                  ^^^^^^^^^^

